--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#1e1e1e" />
   </head>
   <body>
-    <app-root></app-root>
+    <app-root class="root"></app-root>
     <noscript>
       Please enable JavaScript to continue using this application.
     </noscript>
